--- a/app/src/main/res/layout/post_item.xml
+++ b/app/src/main/res/layout/post_item.xml
@@ -6,7 +6,6 @@
                                              android:layout_height="wrap_content">
 
     <TextView
-            android:text="hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/title_label"
@@ -18,20 +17,20 @@
             app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
-            android:text="4 weeks ago"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/published_label"
             app:layout_constraintTop_toTopOf="@+id/author_label"
-            app:layout_constraintEnd_toStartOf="@+id/comments_label" android:layout_marginEnd="8dp"/>
+            app:layout_constraintEnd_toStartOf="@+id/comments_label"
+            android:layout_marginEnd="8dp"/>
 
     <TextView
-            android:text="jordanobruno"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/author_label"
             app:layout_constraintEnd_toStartOf="@+id/published_label"
-            android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/title_label"/>
 
     <ImageView
@@ -49,17 +48,19 @@
             app:layout_constraintBottom_toBottomOf="parent"/>
 
     <TextView
-            android:text="12 comments"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/comments_label" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:id="@+id/comments_label"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
             app:layout_constraintTop_toTopOf="@+id/author_label"/>
     <TextView
-            android:text="TextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/has_full_image_label" app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/has_full_image_label"
+            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/title_label"/>
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/title_label"/>
 
 </android.support.constraint.ConstraintLayout>
